--- a/contents/2023/dev_hollow.mdx
+++ b/contents/2023/dev_hollow.mdx
@@ -15,8 +15,8 @@ desc: 能学到好玩的东西
   - go 静态文件服务添加 ETAG
 - 渲染 Markdown/Mdx
   - [goldmark](https://github.com/yuin/goldmark) (最强大的 markdown 解析器，没有之一)
-  - 为 [goldmark](https://github.com/yuin/goldmark) 编写插件
-  - 将 html 节点转为 jsx 节点。
+  - 为 [goldmark](https://github.com/yuin/goldmark) 编写插件解析 js 代码与 jsx 代码
+  - 将 html 转为 jsx。
 - 加载远端文件（主题）
   - [gogit](https://github.com/go-git/go-git)
 - 开发工程
