--- a/contents/2023/dev_hollow.mdx
+++ b/contents/2023/dev_hollow.mdx
@@ -7,6 +7,8 @@ draft: true
 desc: 能学到好玩的东西
 ---
 
+本以为一个简单的博客系统没难度，但随着开发过程，我发现它越来越有有趣，也越来越有差异化。
+
 - 文件系统
   - [go-billy](https://github.com/go-git/go-billy)
 - 渲染 Jsx
@@ -17,6 +19,8 @@ desc: 能学到好玩的东西
   - [goldmark](https://github.com/yuin/goldmark) (最强大的 markdown 解析器，没有之一)
   - 为 [goldmark](https://github.com/yuin/goldmark) 编写插件解析 js 代码与 jsx 代码
   - 将 html 转为 jsx。
+  - sourcemap
+    - https://juejin.cn/post/6844903887556575246
 - 加载远端文件（主题）
   - [gogit](https://github.com/go-git/go-git)
 - 开发工程
