--- a/contents/2022/梦境系列-疫情后的校园.md
+++ b/contents/2022/梦境系列-疫情后的校园.md
@@ -1,13 +1,13 @@
 ---
-title: 梦境系列 💭
+title: 梦境 💭 疫情后的校园
 slug: dreamland
 date: 2022-09-30
 tags: [生活]
 desc: 有时候做的梦是真的精彩，试试能不能记录下
 ---
-有时候做的梦是真的精彩，试试能不能记录下
 
-## 疫情后的校园
+> 有时候做的梦是真的精彩，试试能不能记录下
+
 说是校园，实际上是避难所，大家都堆积在住宿楼生活。
 2040年，除了已经常态化的新冠疫情，还有更猛烈的瘟疫，由于瘟疫致死率太高，政府管控比新冠严格多了，几乎所有小区都封锁了起来。而今天科技也十分发达，甚至在学校门口都还有两个重型机甲看守。往日繁华的街头现在一个人都没有，广告牌也年久失修，颇有一番末日丧尸的感觉。
 
