--- a/contents/2023/flag2023.mdx
+++ b/contents/2023/flag2023.mdx
@@ -13,5 +13,5 @@ import StepList from "./StepList";
 无论简单复杂，先跨出第一步
 
 <StepList items={[
-  {time: "2022-01-10", content: "启蒙"},
+  {time: "2022-01-10", content: "萌芽"},
 ]}></StepList>
