--- a/contents/2023/flag2023.mdx
+++ b/contents/2023/flag2023.mdx
@@ -15,3 +15,8 @@ import StepList from "./StepList";
 <StepList items={[
   {time: "2022-01-10", content: "萌芽"},
 ]}></StepList>
+
+## 去玩
+
+- [] 带家人去峨眉山看日出
+- [] 带老婆去环游洱海
