--- a/contents/2023/flag2023.mdx
+++ b/contents/2023/flag2023.mdx
@@ -4,7 +4,7 @@ slug: flag-2023
 date: 2023-01-10
 tags: [生活]
 draft: false
-desc: 筑梦
+desc: 今年好像对 Flag 有点信心了
 ---
 
 import StepList from "./StepList";
