--- a/contents/2023/whys.mdx
+++ b/contents/2023/whys.mdx
@@ -120,3 +120,11 @@ useMemo 看起来只是无副作用的函数调用，没有给它传递任何的
 8. 安装充电桩师傅来的时候联系物业，**让物业和充电桩师傅一起勘察走线**（比如是否能打孔，绕线会导致费用增加很多）。
 9. 在安装充电桩的时候师傅会断电操作，需要你协调物业，**让物业通知业主之后才能断电**。
 10. 等待安装完成，验收签字，给钱。
+
+# 为什么网线是互相缠绕的？
+仔细观察网线中的8根线材, 发现他们都是两两绕在一起, 这样做的原因是能让它们两产生的电磁干扰互相抵消, 要让它们互相抵消, 则需要保证绕在一起的线是一个回路.
+
+在协议中, 1, 2号线用于发送数据, 3, 6号线用于接受数据, 所以, 我们必须保证连接**1, 2口的线绕在一起**, 连接**3, 6口的线绕在一起**才能抵消电磁干扰, 对于 1000M 网络, 我们也需要让**4, 5 绕在一起**；**7, 8 线绕在一起**.
+
+满足上面的必须规则, 也会有很多连线方式, 为了减轻心智负担, 人们还定制了国际上通用的标准, 现在只有两种接法了:
+![](img/网线.png)
