自动换行文章添加说明

--- a/contents/2023/Go 文字换行.mdx
+++ b/contents/2023/Go 文字换行.mdx
@@ -4,7 +4,7 @@ slug: go-text-wrap
 date: 2023-02-17
 tags: [Golang]
 draft: false
-desc:
+desc: 看起来简单，但需要考虑很多细节。
 ---
 
 学习过 css 应该就会知道 css 里有一个 word-break 属性，默认换行行为如下图，它对于长单词不会换行，因为它不会打破单词。
