fix flag 2023 heading

--- a/contents/2023/flag_2023.mdx
+++ b/contents/2023/flag_2023.mdx
@@ -9,14 +9,14 @@ desc: 今年好像对 Flag 有着奇异的信心
 
 import StepList from "./StepList";
 
-# 做一个游戏并分享给好友
+## 做一个游戏并分享给好友
 无论简单复杂，先跨出第一步
 
 <StepList items={[
   {time: "2022-01-10", content: "萌芽"},
 ]}></StepList>
 
-# 去玩
+## 去玩
 
 - [ ] 带家人去峨眉山看日出
 - [ ] 带老婆去环游洱海
