疫情后校园加了个结局（use chatGPT）

--- a/contents/2022/梦境系列-疫情后的校园.md
+++ b/contents/2022/梦境系列-疫情后的校园.md
@@ -9,11 +9,9 @@ desc: 有时候做的梦是真的精彩，试试能不能记录下
 > 有时候做的梦是真的精彩，试试能不能记录下
 
 说是校园，实际上是避难所，大家都堆积在住宿楼生活。
-2040年，除了已经常态化的新冠疫情，还有更猛烈的瘟疫，由于瘟疫致死率太高，政府管控比新冠严格多了，几乎所有小区都封锁了起来。而今天科技也十分发达，甚至在学校门口都还有两个重型机甲看守。往日繁华的街头现在一个人都没有，广告牌也年久失修，颇有一番末日丧尸的感觉。
+2040年，除了已经常态化的新冠疫情，还有一种更加可怕的瘟疫正在肆虐全球，由于这种瘟疫致死率极高，政府管控比新冠严格多了，几乎所有小区都被封锁了起来。而今天科技也十分发达，甚至在学校门口都还有两个重型机甲看守。往日繁华的街头现在一个人都没有，广告牌也年久失修，颇有一番末日丧尸的感觉。
 
-我每天躺着玩手机，靠着政府每天发放的口粮而活，虽然两个馒头一个土豆吃得我都要吐了，但我们也不追求什么了，所有人都不让出学校，整个国家物资严重不足，能吃上一口都很不容易了。
-
-可今天有些不一样，手机群里有人说解封了，可以出校园了。我从床上爬了起来，学校里待太久了还是想出去看看，如果还能买点好吃的换换口味就更好了。
+每天，我靠着政府发放的口粮勉强支撑着生活，但食物品质和数量都很有限。然而，今天有些不一样，手机群里有人说解封了，可以出校园了。我从床上爬了起来，早已经忘记了外面的世界是什么样子，此时我还是很想出去看看。
 
 我往校门口走去，却发现围栏有好多破洞，想着校园已经解封，大家高兴得破坏了围栏也正常，对我而言还省了一节路，没多想就钻了出去。
 
@@ -34,5 +32,7 @@ desc: 有时候做的梦是真的精彩，试试能不能记录下
 我疯狂思考到底发生了什么，脑海中无数个电影片段闪过，这明显就是丧尸啊。
 
 我突然明白，围墙也许不是学校的人弄坏的。
+
+我心中的恐惧达到了顶峰，但同时也感到一股强烈的求生欲望涌上心头。我开始收拾行李，准备离开学校去寻找安全的地方。在这个已经被瘟疫和丧尸笼罩的世界里，我要为自己活下去。
 
 > 完
