完善一百个为什么

--- a/contents/2023/一百个为什么/什么叫量子纠缠.md
+++ b/contents/2023/一百个为什么/什么叫量子纠缠.md
@@ -5,4 +5,11 @@ export: false
 sort: 14
 ---
 
-可以通过一些手断让多个量子发生纠缠(todo.)，无论他们相隔多远，当我们测量其中一个量子的时候，其他的量子也会坍缩成一个状态。比如我们如果测量到一个量子的状态是1，那么在测量纠缠量子的时候就一定是0。猜测一是: 他们之间仿佛有超越光速的通讯机制来协调他们的状态，猜测二是: 它们在诞生时就有一个属性在记录自己的状态，只是我们技术不够还没测量出来到，在观测的时候通过坍缩我们才能看见不同的状态，这也是爱因斯坦的理论，但已经有实验推翻了这个猜想(todo)
+可以通过一些手断让多个量子发生纠缠（我也不清楚），无论他们相隔多远，当我们测量其中一个量子的时候，其他的量子也会坍缩成唯一一个状态。比如我们如果测量到一个量子的状态是 1，那么在测量纠缠量子的时候就一定是 0。猜测一是: 他们之间仿佛有超越光速的通讯机制来协调他们的状态，猜测二是: 它们在诞生时就有一个属性在记录自己的状态，只是我们技术不够还没测量出来到，在观测的时候通过坍缩我们才能看见不同的状态，这也是爱因斯坦的理论，但贝尔不等式实验推翻了这个猜想。
+
+## 贝尔不等式实验
+贝尔不等式实验（Bell test experiment）是一种基于量子力学的实验，旨在证明量子纠缠现象的存在。这个实验由约翰·贝尔在20世纪60年代提出，旨在验证两个或更多粒子间的相关性是否能够用经典物理学解释。
+
+在实验中，通常会使用高度纠缠的光子对，并将它们分开传播到相距很远的两个地点。然后对这些光子进行测量，比如测量它们的偏振方向。根据量子力学的理论，这些光子之间存在着所谓的“量子纠缠”，即它们在某些方面是彼此相互依赖和关联的。通过实验可以检查这种关联是否能够用经典物理学的模型来解释。
+
+如果实验结果违反了贝尔不等式，说明量子力学中存在非局域性、非经典性的现象，也就是量子纠缠现象的存在。而实验结果与贝尔不等式相符则说明量子力学中的基本假设成立，即粒子的状态在测量前不存在确定性，也就是存在波粒二象性。贝尔不等式实验是量子力学中的一个重要实验，对于量子通信和量子计算技术的发展具有重要意义。
