--- a/contents/2022/梦境系列-疫情后的校园.md
+++ b/contents/2022/梦境系列-疫情后的校园.md
@@ -11,11 +11,15 @@ desc: 有时候做的梦是真的精彩，试试能不能记录下
 说是校园，实际上是避难所，大家都堆积在住宿楼生活。
 2040年，除了已经常态化的新冠疫情，还有一种更加可怕的瘟疫正在肆虐全球，由于这种瘟疫致死率极高，政府管控比新冠严格多了，几乎所有小区都被封锁了起来。而今天科技也十分发达，甚至在学校门口都还有两个重型机甲看守。往日繁华的街头现在一个人都没有，广告牌也年久失修，颇有一番末日丧尸的感觉。
 
+![mechas](mechas.webp)
+
 每天，我靠着政府发放的口粮勉强支撑着生活，但食物品质和数量都很有限。然而，今天有些不一样，手机群里有人说解封了，可以出校园了。我从床上爬了起来，早已经忘记了外面的世界是什么样子，此时我还是很想出去看看。
 
 我往校门口走去，却发现围栏有好多破洞，想着校园已经解封，大家高兴得破坏了围栏也正常，对我而言还省了一节路，没多想就钻了出去。
 
 外面很久没有人类活动了，树木花草都长得格外好，现在正值秋天，红树叶直接把面前整座山都覆盖了，阳光穿过薄雾穿过树林摇曳闪烁，看起来十分壮观美丽，深呼吸一口，感叹到外面可比学校破墙烂楼好太多了。
+
+![maple_trees](maple_trees.webp)
 
 继续往街区走去，街上还是没什么人，不过好在有两家商店开着，选购好东西我就准备回来了，正悠闲走在马路上欣赏风景时，却听到学校响起了警报，匆匆跑往校门口，两个机甲却把我拦住了，我有点奇怪，不是说解封了吗？怎么又不让进？想去询问可它们只是两个不会交流的机器，哎，科技以人为本就是个伪命题。我只好跑回我出来的围栏。
 
