--- a/contents/2023/flag_2023.mdx
+++ b/contents/2023/flag_2023.mdx
@@ -1,5 +1,5 @@
 ---
-title: 2023 想做的事
+title: 2023 - 往后 想做的事
 slug: flag-2023
 date: 2023-01-10
 tags: [生活]
@@ -18,5 +18,6 @@ import StepList from "./StepList";
 
 ## 去玩
 
-- [ ] 带家人去峨眉山看日出
+- [x] 带家人去峨眉山看日出（已降级为 "带老婆去峨眉山看日出"，于 2023 年 4 月 1 号完成）
 - [ ] 带老婆去环游洱海
+- [ ] 去长沙逛解放西、看小桀。
