--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -5,26 +5,27 @@ const contents = [
     "title": "MerryFlow",
     "desc": "拖拽出自己的 AI 工作流",
     "images": ["../statics/img/merryflow.png"],
-    "footer": "<a href='https://github.com/zbysir/writeflow' class='text-blue-500'>Github</a>",
+    "footer": "<a href='https://github.com/zbysir/writeflow'>Github</a>",
   },
   {
     "title": "竹子建站",
     "desc": "公司项目，作为技术负责人从 0 到 1 架构整个系统",
     "images": ["../statics/img/zhuzi-website.png", "../statics/img/zhuzi-editor.png"],
-    "footer": "<a href='https://www.zhuzi.com.cn' class='text-blue-500'>Website</a>",
+    "footer": "<a href='https://www.zhuzi.com.cn'>Website</a>",
   },
   {
     "title": "BGM Stage",
     "desc": "音乐舞台。曾用于在我的婚礼上切换 BGM，可以快速的根据进度淡入淡出的切换 BGM。",
     "images": ["../statics/img/bgm-stage.png"],
     "footer": "<a href='https://github.com/zbysir/bgm-stage' class='text-blue-500'>Github</a> / " +
-      "<a href='https://bgm.bysir.top/' class='text-blue-500'>Online</a>",
+      "<a href='https://bgm.bysir.top/'>Online</a>",
   },
   {
     "title": "Hollow",
     "desc": "你所看到的页面就是由 Hollow 构建的",
     "images": ["../statics/img/hollow1.png", "../statics/img/hollow2.png", "../statics/img/hollow3.png"],
-    "footer": "<a href='https://github.com/zbysir/hollow' class='text-blue-500'>Github</a>",
+    "footer": "<a href='https://github.com/zbysir/hollow' class='text-blue-500'>Github</a> /" +
+      "<a href='https://gohollow.top/'>Document</a>",
   }
 ]
 const col = (contents) => {
@@ -45,7 +46,7 @@ const col = (contents) => {
 
 ## 项目
 
-一下是主要由我负责的项目，想分享于你。如果你也对它们有兴趣，欢迎与我联系。
+以下是主要由我负责的项目，想分享于你。如果你也对它们有兴趣，欢迎与我联系。
 
   <>
     <div className="
