Writing: 多角色系统设计

--- a/contents/2023/一百个为什么.mdx
+++ b/contents/2023/一百个为什么.mdx
@@ -22,11 +22,13 @@ let tags = contents.reduce((acc, i) => {
 }, []);
 tags = [...new Set(tags)];
 
-小时候父亲给我买了十万个为什么，成为了我第一本爱看的图书。但生活却不止十万个为什么，依然有太多的东西需要去学习与记忆。于是我想记下我需要的为什么，以免日后忘记，通常它们比较短小，合适组成一个合集。
+小时候父亲给我买了十万个为什么，成为了我第一本爱看的图书。但生活却不止十万个为什么，依然有太多的东西需要去学习与记忆。于是我想记下我需要的为什么，以免日后忘记，通常它们比较短小，不能单独当做一篇文章，合适组成一个合集。
 
 那先小定一个小目标，叫 一百个为什么。
 
 将包括科学，生活，编程，我自己，是个大杂烩。
+
+> 你可以点击下面的分类进行筛选。
 
 <>
   <div x-data="{ selected: ''}">
